--- a/templates/base.html
+++ b/templates/base.html
@@ -25,26 +25,27 @@
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item mt-2">
                     <form method="GET" action="{% url 'search' %}">
-                    <div class="input-group">
-                        <input type="text" class="form-control search-width" placeholder="Search..." name='q'>
+                    <div class="input-group search-width">
+                        <input type="text" class="form-control" placeholder="Search..." name='q'>
                         <div class="input-group-append">
                           <button class="input-group-text" type="submit" id="basic-addon2"><i class="fa fa-search"></i></button>
                         </div>
                     </div>
                     </form>
                 </li>
-                <li class="nav-item mt-2">
+                {% with url_name=request.resolver_match.url_name %}
+                <li class="nav-item mt-2 {% if url_name == 'home' %}active{% endif %}">
                     <a class="nav-link" href="{% url 'home' %}">Home</a>
                 </li>
-                <li class="nav-item mt-2">
+                <li class="nav-item mt-2  {% if url_name == 'product' %}active{% endif %}">
                     <a class="nav-link" href="{% url 'product' %}">Products</a>
                 </li>
                 {% if user.is_authenticated %}
-                <li class="nav-item mt-2">
+                <li class="nav-item mt-2 {% if url_name == 'cart' %}active{% endif %}">
                     <a class="nav-link" href="{% url 'cart' %}">Your Cart</a>
                 </li>
                 {% endif %}
-                <li class="nav-item mt-2">
+                <li class="nav-item mt-2 {% if url_name == 'contact' %}active{% endif %}">
                     <a class="nav-link" href="{% url 'contact' %}">Contact</a>
                 </li>
                 <li class="nav-item text-center">
@@ -60,6 +61,7 @@
                         </small>
                     {% endif %}
                 </li>
+                {% endwith %}
             </ul>
         </div>
       </nav>
