--- a/templates/signup.html
+++ b/templates/signup.html
@@ -2,18 +2,25 @@
 {% load crispy_forms_tags %}
 
 {% block content %}
-<section class="container py-5">
+    {% if user.is_authenticated %}
+    <section class="container py-5" style="height: 20rem;">
+        <div class="alert alert-warning text-center">
+            <h3>You are still login. Please go <a href="{% url 'home' %}">Back</a></h3>
+        </div>
+    {% else %}
+    <section class="container py-5">
     <div class="form-width">
-       <div class="card">
-           <div class="card-body">
-            <h2>Sign Up</h2>
-            <form method="POST" >
-                {% csrf_token %}
-                {{ form|crispy }}
-                <button type=submit class="btn btn-success btn-sm container">Sign Up</button>
-            </form>
-           </div>
-       </div>
-    </div>
+        <div class="card">
+            <div class="card-body">
+             <h2>Sign Up</h2>
+             <form method="POST" enctype="multipart/form-data">
+                 {% csrf_token %}
+                 {{ form|crispy }}
+                 <button type=submit class="btn btn-success btn-sm container">Sign Up</button>
+             </form>
+            </div>
+        </div>
+     </div>
+    {% endif %}
 </section>
 {% endblock content %}
