--- a/templates/base.html
+++ b/templates/base.html
@@ -28,7 +28,7 @@
                     <div class="input-group search-width">
                         <input type="text" class="form-control" placeholder="Search..." name='q'>
                         <div class="input-group-append">
-                          <button class="input-group-text" type="submit" id="basic-addon2"><i class="fa fa-search"></i></button>
+                          <button class="input-group-text bg-primary" type="submit" id="basic-addon2"><i class="fa fa-search text-light"></i></button>
                         </div>
                     </div>
                     </form>
@@ -70,7 +70,7 @@
     {% endblock content %}
     
     <!-- Footer -->
-    <footer class="border-top border-success">
+    <footer class="border-top border-primary">
         <div class="container">
             {{ count }}
         <div class="row py-5">
@@ -111,17 +111,17 @@
             <div class="col-sm-2">
                 <h5>Social Media</h5>
                 <ul class="list-unstyled">
-                    <li><a href="#" class="text-dark"><i class="fab fa-facebook"></i> Facebook</a></li>
+                    <li><a href="#" class="text-dark"><i class="fab fa-github"></i> Github</a></li>
                     <li><a href="#" class="text-dark"><i class="fab fa-instagram"></i> Instagram</a></li>
-                    <li><a href="#" class="text-dark"><i class="fab fa-twitter"></i> Twitter</a></li>
+                    <li><a href="#" class="text-dark"><i class="fab fa-linkedin"></i> Linkedin</a></li>
                     <li><a href="#" class="text-dark"><i class="fab fa-youtube"></i> Youtube</a></li>
                 </ul>
             </div>
             <div class="col-sm-1"></div>
         </div>
         </div>
-        <div class="text-center text-success font-weight-bold">
-        <i class="far fa-copyright"></i> 2020 Linkaran.io
+        <div class="text-center text-primary font-weight-bold">
+        <i class="far fa-copyright"></i> 2020 Rozzy Rahmanda
         </div>
     </footer>
     <!-- end of Footer -->
