--- a/templates/detail.html
+++ b/templates/detail.html
@@ -30,7 +30,7 @@
                             <span class="text-muted">{{ object.reviews }} reviews</span>
                         </div>
                         <div class="col">
-                            <span class="text-success"><i class="fas fa-check-square"></i> 145 orders</span>
+                            <span class="text-primary"><i class="fas fa-check-square"></i> 145 orders</span>
                         </div>
                     </div>
                     <h5>${{ object.price }}<span class="text-muted"> /per piece</span></h5>
@@ -61,10 +61,10 @@
                     </table>
                     <div class="row py-3 card-footer">
                         <div class="col">
-                            <a href="{% url 'payment' %}" class="btn btn-success btn-sm container"><i class="fa fa-credit-card"></i> Buy Now</a>
+                            <a href="{% url 'payment' %}" class="btn btn-primary btn-sm container"><i class="fa fa-credit-card"></i> Buy Now</a>
                         </div>
                         <div class="col">
-                            <button type="submit" class="btn btn-outline-success btn-sm container"><i class="fa fa-shopping-cart"></i> Add to cart</button>
+                            <button type="submit" class="btn btn-outline-primary btn-sm container"><i class="fa fa-shopping-cart"></i> Add to cart</button>
                         </form>
                         </div>
                     </div>
