--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -27,7 +27,7 @@
                 <form method="POST">
                     {% csrf_token %}
                     {{ form|crispy }}
-                    <button type="submit" class="btn btn-success container">Login</button>
+                    <button type="submit" class="btn btn-primary container">Login</button>
                 </form>
                 <div class="row py-2">
                     <div class="col-sm-6">
