--- a/templates/contact.html
+++ b/templates/contact.html
@@ -9,7 +9,7 @@
                 <form method="POST">
                     {% csrf_token %}
                     {{ form|crispy }}
-                    <button type="submit" class="btn btn-success container">Send</button>
+                    <button type="submit" class="btn btn-primary container">Send</button>
                 </form>
             </div>
         </div>
