--- a/templates/search.html
+++ b/templates/search.html
@@ -14,7 +14,7 @@
     <div class="row py-3">
       {% for product in search %}
       <div class="col-sm-3">
-        <div class="card border-success shad">
+        <div class="card shad">
           <a href="{% url 'detail' product.pk %}"><img src="{{ product.image.url }}" class="card-img-top" alt="..."></a>
           <div class="card-body text-center">
             <p>{{ product.title }}</p>
