--- a/templates/signup.html
+++ b/templates/signup.html
@@ -16,7 +16,7 @@
              <form method="POST" enctype="multipart/form-data">
                  {% csrf_token %}
                  {{ form|crispy }}
-                 <button type=submit class="btn btn-success btn-sm container">Sign Up</button>
+                 <button type=submit class="btn btn-primary btn-sm container">Sign Up</button>
              </form>
             </div>
         </div>
