--- a/templates/account/profile.html
+++ b/templates/account/profile.html
@@ -41,7 +41,7 @@
             <div class="card-body">
               <h3>{{ total }}</h3>
               <p class="font-weight-bold">
-                Total items in cart
+                Total orders item in cart
               </p>
             </div>
           </div>
