--- a/templates/home.html
+++ b/templates/home.html
@@ -13,12 +13,12 @@
                 <a class="nav-link text-dark dropdown-toggle" href="#" id="dropdown1" data-toggle="dropdown"><i class="fa fa-list"></i> All Categories</a>
             <div class="dropdown-menu" aria-labelledby="dropdown1">
                 {% for item in category %}
-                <a href="{% url 'search' %}?q={{ item.category }}" class="dropdown-item">{{ item.category }}</a>
+                <a href="{% url 'search' %}?q={{ item.category }}" class="dropdown-item">{{ item }}</a>
                 {% endfor %}
             </div>
             </li>
             {% for item in category %}
-            <a class="nav-link text-dark" href="{% url 'search' %}?q={{ item.category }}">{{ item.category }}</a>
+            <a class="nav-link text-dark" href="{% url 'search' %}?q={{ item.category }}">{{ item }}</a>
             {% endfor %}
             </div>
         </nav>
