--- a/templates/detail.html
+++ b/templates/detail.html
@@ -6,10 +6,10 @@
        <div class="card">
            <div class="card-body">
             <div class="row">
-                <div class="col">
+                <div class="col-sm-6">
                     <img src="{{ object.image.url }}" alt="baju">
                 </div>
-                <div class="col">
+                <div class="col-sm-6">
                     <h3>{{ object.title }}</h3>
                     <div class="row">
                         <div class="col">
